# sun-calc

./: .clang-format  CMakeLists.txt  readme.md
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml
sun-calc/: noaa_calc.cpp  noaa_calc.h  sun_calc.cpp  sun_calc.h
test/: main.cpp
